--- a/frontend/.github/workflows/main.yml
+++ b/frontend/.github/workflows/main.yml
@@ -1,24 +1,20 @@
-name: NextJS CI
+name: Next.js CI
+
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+    branches: [ "main" ]
 
 jobs:
-  ci:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js (version 20)
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -27,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint Code
+      - name: Lint code
         run: npm run lint
 
-      - name: Build Application
+      - name: Build application
         run: npm run build
