--- a/frontend/.github/workflows/main.yml
+++ b/frontend/.github/workflows/main.yml
@@ -3,8 +3,16 @@ name: Next.js CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'frontend/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'frontend/**'
+
+defaults:
+  run:
+    working-directory: ./frontend
 
 jobs:
   build:
@@ -19,6 +27,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
 
       - name: Install dependencies
         run: npm ci
