--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - 'frontend/**'
+      - '../../frontend'
   pull_request:
     branches: [ "main" ]
     paths:
-      - 'frontend/**'
+      - '../../frontend'
 
 defaults:
   run:
