--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "class-validator": "^0.14.3",
     "mysql2": "^3.16.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
