--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "npx playwright test"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
