--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "class-validator": "^0.14.3",
+    "cors": "^2.8.5",
     "mysql2": "^3.16.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
